Not so fast. It's common 4 the depressed to think about suicide. Also as a "friend of a friend", I cant offer help directly. If I open up an emergency notice 2 soon, it will only result in disturbing others and nothing really   helpful. However, in case that it is more immediately life-threatening, such a   suicide plans, this could be used then. In the mean time, i just get   it hidden from index.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>document.location="blog/multi_emerg.html";</script></head><body></body></html>
+<!DOCTYPE html><html><head><script>document.location="blog/index.html";</script></head><body></body></html>
